<resources>
    <string name="app_name">RF Inventura</string>
    <string name="action_settings">Nastavitve</string>
    <string name="action_about">O aplikaciji</string>
    <string name="action_display">Nastavitve zaslona</string>
    <string name="title_ip_or_domain">Vnesite domeno/IP</string>
    <string name="title_ping_count">Število PING</string>
    <string name="title_ping_succ">PING je uspešen</string>
    <string name="title_ping_fail">Zelo PING</string>
    <string name="title_ping_seconds">s</string>
    <string name="title_ping_background">Ozadje</string>
    <string name="title_ping_wait">Časovna omejitev(e)</string>
    <string name="title_ping_restart">Ponovni zagon</string>
    <string name="title_ping_pingresult">Rezultat pinga</string>
    <string name="title_ping_uploadresult">Naloži rezultat</string>
    <string name="title_ping_downloadresult">Prenos rezultati</string>
    <string name="title_start">Začetek</string>
    <string name="title_stop">Stop</string>
    <string name="title_activity_settings">Nastavitve</string>
    <string name="action_set">Nastavitve</string>
    <string name="msg_network_none">Omrežje ni na voljo</string>
    <string name="msg_network_ok">Omrežje je povezano</string>
    <string name="msg_network_unavailable">Omrežje ni na voljo</string>
    <string name="msg_domain_ip_bad">Zelo domena/IP</string>
    <string name="msg_loding">nalaganje...</string>
    <string name="msg_no_data">NI PODATKOV</string>
    <string name="msg_mac_error">ZELO</string>
    <string name="msg_mac_change">SPREMENJENO</string>
    <string name="msg_mac_unmatched">Brez primere</string>
    <string name="app_title">AppCenter</string>
    <string name="app_msg_exit_confirm">Ponovno pritisnite za izhod iz programa</string>
    <string name="upload_title">Orodje za nalaganje %s</string>
    <string name="download_title">Orodje za prenos %s</string>
    <string name="action_back">Nazaj</string>
    <string name="ok">v redu</string>
    <string name="exit">Izhod</string>
    <string name="save">Shrani</string>
    <string name="cancel">Prekliči</string>
    <string name="clear">Obrišite ga</string>
    <string name="close">Zapri</string>
    <string name="up_one_level">..(gor)</string>
    <string name="current_dir">.(osveži)</string>
    <string name="strFilePath">Pot datoteke</string>
    <string name="strBrowser">Prebrskaj</string>
    <string name="strPermissionDeny">Brez dovoljenja</string>
    <string name="title_activity_download">Orodje za prenos</string>
    <string name="title_activity_upload">Orodje za nalaganje</string>
    <string name="title_Ping">Ping</string>
    <string name="title_Download">Prenesi</string>
    <string name="title_Upload">Nalaganje</string>
    <string name="strUpload">Nalaganje</string>
    <string name="strUpgrade">Nadgradnja</string>
    <string name="title_activity_ping">PingActivity</string>
    <string name="hello_world">Pozdravljen, svet!</string>
    <string name="title_ping_packet_size">Velikost paketa</string>
    <string name="ping_title">Orodje za ping %s</string>
    <string name="yid_title">1D orodje za črtno kodo</string>
    <string name="erd_title">Orodje za črtno kodo 2D</string>
    <string name="title_activity_yi_d">1D</string>
    <string name="title_activity_er_d">2d</string>
    <string name="title_scan">Skeniraj</string>
    <string name="title_clear">jasno</string>
    <string name="title_init_barcode">init črtna koda</string>
    <string name="title_scan_between">Interval</string>
    <string name="title_work_time">delo</string>
    <string name="title_wait_time">Počakaj</string>
    <string name="yid_title_scan_compare">Primerjaj</string>
    <string name="yid_title_scan_continuous">Samodejno, interval</string>
    <string name="yid_msg_scan_fail">Napaka skeniranja</string>
    <string name="yid_msg_scan_cancel">Skeniranje preklicano</string>
    <string name="yid_msg_scan_timeout">Časovna omejitev skeniranja</string>
    <string name="yid_msg_scan_error">Napaka črtne kode</string>
    <string name="title_scan_count">skupaj</string>
    <string name="title_succ_count">uspeh</string>
    <string name="title_fail_count">neuspeh</string>
    <string name="title_error_count">napaka</string>
    <string name="title_error_rate">napaka</string>
    <string name="title_succ_rate">uspeh</string>
    <string name="title_fail_rate">neuspeh</string>
    <string name="title_activity_bluetooth_print">Tiskalnik BT</string>
    <string name="title_decode_time">čas dekodiranja</string>
    <string name="send">Pošlji</string>
    <string name="Print">Tiskanje</string>
    <string name="Clear">jasno</string>
    <string name="not_connected">Povežite tiskalnik bluetooth</string>
    <string name="bt_not_enabled_leaving">Prosimo izberite napravo!!</string>
    <string name="title_connecting">Povezovanje ...</string>
    <string name="title_connected_to">Povezan:</string>
    <string name="title_not_connected">Brez povezave</string>
    <string name="default_font_gray_scale">4</string>
    <string name="fontGrayscaleName">Sivine</string>
    <string name="fontGrayScaleRange">(1~8)</string>
    <string name="PrintContent">POZDRAVLJEN, SVET! \n</string>
    <string name="scanning">skeniranje ...</string>
    <string name="select_device">Izberite napravo</string>
    <string name="none_paired">Brez ujemanja</string>
    <string name="none_found">Ni najdeno</string>
    <string name="title_paired_devices">Ujemanje</string>
    <string name="title_other_devices">Druge naprave</string>
    <string name="button_scan">Skeniraj</string>
    <string name="title_activity_uhfmain">UHF</string>
    <string name="tvInventoryName">Inventarna oznaka</string>
    <string name="tvCountOfTags">Skupaj</string>
    <string name="rbInventorySingle">Enotni</string>
    <string name="rbInventoryLoop">Avto</string>
    <string name="rbInventoryAnti">Anti</string>
    <string name="tvQ">Q vrednost:</string>
    <string name="btInventory">Začetek</string>
    <string name="title_stop_Inventory">Nehaj</string>
    <string name="tvTagUii">EPC</string>
    <string name="tvTagLen">Dolžina</string>
    <string name="tvTagCount">štetje</string>
    <string name="btClear">Pobriši</string>
    <string name="tvTag">Oznaka</string>
    <string-array name="arrayAntiQ">

        <item>0</item>

        <item>1</item>

        <item>2</item>

        <item>3</item>

        <item>4</item>

        <item>5</item>

        <item>6</item>

        <item>7</item>

        <item>8</item>

        <item>9</item>

        <item>10</item>

        <item>11</item>

        <item>12</item>

        <item>13</item>

        <item>14</item>

        <item>15</item>

    </string-array>
    <string-array name="arrayLF">

        <item>Osebna izkaznica</item>

        <item>Živalska oznaka</item>

        <item>Živjo Tag</item>

        <item>Oznaka HDX</item>

        <item>EM4450</item>

        <item>SKRILA BLIŽINA</item>

    </string-array>
    <string-array name="arrayUart" translatable="false">

        <item>Črtna koda</item>

        <item>RFID</item>

        <item>UHF</item>

        <item>Prstni odtis</item>

    </string-array>
    <string-array name="arrayCheck" translatable="false">

        <item>Noben</item>

        <item>Čuden</item>

        <item>celo</item>

    </string-array>
    <string name="btUii">Preberi EPC</string>
    <string name="ckWithUii">Uporabite EPC</string>
    <string name="tvTagUii_Read">EPC:</string>
    <string name="tvBank">Banka:</string>
    <string name="tvPtr">Ptr:</string>
    <string name="tvLen">Len:</string>
    <string name="tvAccessPwd">Priročnik za dostop:</string>
    <string name="tvLockCode">Koda za zaklepanje:</string>
    <string name="tvOption_Read">Način branja:</string>
    <string name="ckLoop_Read">Avto</string>
    <string name="ckAnti_Read">Anti</string>
    <string name="ckSecond">Nastavitev parametrov stopnje 2</string>
    <string name="tvBank2_Read">Blokiraj:</string>
    <string name="tvPtr2_Read">Ptr:</string>
    <string name="tvLen2_Read">Len:</string>
    <string name="tvData_Read">podatki:</string>
    <string name="btRead">Preberi</string>
    <string name="uhf_title_kill" translatable="false">Kill:</string>
    <string name="uhf_title_access" translatable="false">Access:</string>
    <string name="uhf_title_uii" translatable="false">UII:</string>
    <string name="uhf_title_tid" translatable="false">TID:</string>
    <string name="uhf_title_user" translatable="false">USER:</string>
    <string name="uhf_title_read">Preberi</string>
    <string name="uhf_title_write">Pišite</string>
    <string name="uhf_title_filter">Filter</string>
    <string name="uhf_title_temp">Začasna maska</string>
    <string name="uhf_title_perm">Trajna maska</string>
    <string name="uhf_title_open">Odprto</string>
    <string name="uhf_title_lock">Zaklepanje</string>
    <string-array name="arrayBank">

        <item>REZERVIRANO</item>

        <item>EPC</item>

        <item>ČAS</item>

        <item>UPORABNIK</item>

    </string-array>
    <string-array name="arrayReadLock">

        <item>Preberi</item>

        <item>Permalock</item>

    </string-array>
    <string-array name="arrayBank2">

        <item>EPC</item>

        <item>ČAS</item>

        <item>UPORABNIK</item>

    </string-array>
    <string-array name="arrayOption_Read">

        <item>Samski</item>

        <item>Avto</item>

        <item>Proti (1 stopnja)</item>

        <item>Proti (2 stopnja)</item>

    </string-array>
    <string name="uhf_title_power">Izhodna moč:</string>
    <string name="uhf_btn_setpower">Nastavite moč</string>
    <string name="uhf_btn_workwait">Nastavite Pwm</string>
    <string name="uhf_btn_get_workwait">Pridobite Pwm</string>
    <string name="uhf_btn_getpower">Pridobite moč</string>
    <string name="uhf_title_dbm">dBm</string>
    <string name="uhf_title_link">RFLink:</string>
    <string name="uhf_btn_set_link">Nastavi povezavo</string>
    <string name="uhf_btn_get_link">Dobi povezavo</string>
    <string-array name="arrayPower2" translatable="false">

        <item>5</item>

        <item>6</item>

        <item>7</item>

        <item>8</item>

        <item>9</item>

        <item>10</item>

        <item>11</item>

        <item>12</item>

        <item>13</item>

        <item>14</item>

        <item>15</item>

        <item>16</item>

        <item>17</item>

        <item>18</item>

        <item>19</item>

        <item>20</item>

        <item>21</item>

        <item>22</item>

        <item>23</item>

        <item>24</item>

    </string-array>
    <string name="tvChooseInfo">Izberite cilj UII</string>
    <string name="rbRead">Branje podatkov</string>
    <string name="rbWrite">Zapišite podatke</string>
    <string name="rbErase">Izbriši podatke</string>
    <string name="uhf_msg_tab_set">Config</string>
    <string name="uhf_msg_tab_kill">ubiti</string>
    <string name="uhf_msg_tab_lock">Zaklepanje</string>
    <string name="action_sign_in">Prijava</string>
    <string name="action_sign_in_short">Registracija</string>
    <string name="item_field">Sredstvo</string>
    <string name="location_field">Lokacija</string>
    <string name="qty_field">Količina</string>
    <string name="button_exit">Izhod</string>
    <string name="button_confirm">Potrdi</string>
    <string name="item_hint">I34113431</string>
    <string name="location_hint">01</string>
    <string name="qty_hint">29,7</string>
    <string name="name_inventory">Naziv</string>
    <string name="scanning_inventory">Skeniraj</string>
    <string name="settings">Nastavitve</string>
    <string name="url">http://in-sist.si</string>
    <string name="prompt_uname">Uporabniško ime</string>
    <string name="companyName">Ime podjetja</string>
    <string name="code">Šifra</string>
    <string name="exit_inventory_navigation">Izhod - F1</string>
    <string name="confirm_inventory_navigation">Potrdi - F2</string>
</resources>