<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    
     >


    <item
        android:id="@+id/action_kill"
        android:showAsAction="never"
        android:visible="false"
        android:title="@string/uhf_msg_tab_kill"/>
    <item
        android:id="@+id/action_lock"
        android:visible="false"
        android:title="@string/uhf_msg_tab_lock"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_set"
        android:visible="false"
        android:title="@string/uhf_msg_tab_set"
        app:showAsAction="never" />
    <item
        android:id="@+id/sync"
        android:visible="true"
        android:icon="@drawable/sync"
        android:title="BlockPermalock"
        app:showAsAction="always" />
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/UHF_ver"
        android:title="@string/action_about"
        app:showAsAction="never" />


</menu>