<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    
     >

    <!--
    <item
        android:id="@+id/action_scan"
        android:actionViewClass="android.widget.Tab"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/uhf_msg_tab_scan"/>
    <item
        android:id="@+id/action_read"
        android:orderInCategory="100"
        android:actionViewClass="android.widget.Tab"
        android:showAsAction="always"
        android:title="@string/uhf_msg_tab_read"/>
    <item
        android:id="@+id/action_write"
        android:orderInCategory="100"
        android:actionViewClass="android.widget.Tab"
        android:showAsAction="always"
        android:title="@string/uhf_msg_tab_write"/>
    -->

    <item
        android:id="@+id/action_kill"
        android:showAsAction="never"
        android:visible="false"
        android:title="@string/uhf_msg_tab_kill"/>
    <item
        android:id="@+id/action_lock"
        android:visible="false"
        android:title="@string/uhf_msg_tab_lock"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_set"
        android:visible="false"
        android:title="@string/uhf_msg_tab_set"
        app:showAsAction="never" />
    <item
        android:id="@+id/sync"
        android:visible="true"
        android:icon="@drawable/sync"
        android:title="BlockPermalock"
        app:showAsAction="always" />
    <item
        android:id="@+id/UHF_ver"
        android:title="@string/action_about"
        app:showAsAction="never" />

</menu>