<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.InventoryActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">




        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="0dp"
            android:orientation="vertical">


            <LinearLayout
                android:weightSum="2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
            <EditText
                android:layout_weight="1.5"
                android:id="@+id/tbLocation"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:hint="Lokacija"
                android:paddingLeft="15dp"
                android:background="@drawable/back"
                android:ems="10"
                android:inputType="textPersonName"
                />

                <com.example.uhf.custom.CustomSearchableSpinner
                    android:layout_weight="0.3"
                    android:id="@+id/cbLocation"
                    android:layout_width="0dp"
                    android:layout_height="50dp"


                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="0dp"

                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="" />

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/swListing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:iconifiedByDefault="false"
                    android:queryHint="Iskanje" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        tools:layout_editor_absoluteX="15dp">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btExit"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:backgroundTint="@color/main_color_riko"
            android:textColor="@color/white"
            android:text="@string/exit_inventory_navigation" />

        <Button
            android:id="@+id/btToggleScanning"

            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:backgroundTint="@color/main_color_riko"
            android:textColor="@color/white"
            android:text="@string/scanning_inventory" />

        <Button
            android:id="@+id/btConfirm"

            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:backgroundTint="@color/main_color_riko"
            android:textColor="@color/white"
            android:text="@string/confirm_inventory_navigation" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>