<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingTop="0dp"

    android:paddingRight="0dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activity.LoginActivityMain">

    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="match_parent"
        android:layout_height="173dp"
        android:background="@drawable/blue_bg"
        android:orientation="vertical">

        <ImageView
            android:layout_width="57dp"
            android:layout_height="57dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="23dp"
            android:src="@drawable/logo" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout11">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foregroundGravity="center_horizontal"
            android:gravity="center"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="52dp"
                android:layout_marginTop="150dp"
                android:layout_marginRight="52dp"
                android:background="@drawable/blue_border_rounded_cornwe">

                <EditText
                    android:id="@+id/tbUname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/username_icon"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/prompt_uname"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingLeft="17dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:selectAllOnFocus="true"
                    android:text="janko.jovicic@in-sist.si"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textSize="12sp"

                    />

                <ImageView
                    android:id="@+id/username_icon"
                    android:layout_width="14.7dp"
                    android:layout_height="10.3dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="17dp"
                    android:src="@drawable/email" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="52dp"
                android:layout_marginTop="16.7dp"
                android:layout_marginRight="52dp"
                android:background="@drawable/blue_border_rounded_cornwe">

                <EditText
                    android:id="@+id/tbPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/icon"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/prompt_uname"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="17dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:selectAllOnFocus="true"
                    android:text="in-sist"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textSize="12sp"

                    />

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="14.7dp"
                    android:layout_height="10.3dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="17dp"
                    android:src="@drawable/password" />


            </RelativeLayout>


            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="52dp"
                android:layout_marginTop="18.7dp"
                android:layout_marginRight="52dp"
                android:background="@drawable/blue_fill__rounded_color"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:text="@string/action_sign_in"
                android:textColor="#ffffff"
                android:textSize="12sp" />


        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>